[project]
name = "b12"
version = "0.1.0"
description = ""
authors = [
    {name = "Lucas Dias",email = "lucas97dias@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "responses (>=0.25.8,<0.26.0)"
]

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
